--- a/src/components/vedtak-side/sykepengedager/sykepengedager.less
+++ b/src/components/vedtak-side/sykepengedager/sykepengedager.less
@@ -18,4 +18,14 @@
     .blokkinfo__avsnitt {
         margin: 1rem 0 4px;
     }
+
+    .mer__inntekt__info {
+        margin: 2rem 1rem 0;
+    }
+}
+
+.utvidbar.tekstinfo {
+    .utvidbar__innhold {
+        margin: 0 1rem;
+    }
 }
